Revision history for perl distribution Convos

0.99_16 Not Released
 - Fix getting historic messages, without duplicates #292
 - Add custom styling for participants that are not currently in the channel
 - Add EXPERIMENTAL support for pluggable authentication #89
 - Add support for setting CONVOS_HOME from config file as "home" #289

0.99_15 2016-10-13T22:51:01+0200
 - Fix IRC join channel redirect #284
 - Fix parting IRC channel, even if not in the channel
 - Fix highlight color in chat
 - Fix keeping on_connect_commands
 - Improved keeping scroll position to bottom #269

0.99_14 2016-10-06T22:42:15+0200
 - Autocomplete on nick will start from the beginning of the word
 - Do not autocomplete on "enter"
 - Improved keeping scroll position to bottom #269
 - Improved keeping scroll position when loading historic messages

0.99_13 2016-10-03T09:40:15+0200
 - Fix clearing Convos.settings.sidebar on mobile
 - Fix resetting max-height

0.99_12 2016-10-03T09:31:02+0200
 - Less icons in header
 - Fix <convos-input/> from overlapping main area
 - Add CustomEvent and dispatchEvent polyfill #282
 - Improved scrolling to bottom logic #269

0.99_11 2016-09-19T23:05:31+0200
 - Fix "whois" for participant who is not in any channels
 - Fix removing IRC colors #281
 - Add more information to <convos-message-whois/>
 - Add first optional plugin "ShareDialog" #280

0.99_10 2016-09-14T23:35:31+0200
 - Fix handling of "/whois nick" when "nick" is offline
 - Fix tracking join/part/quit/nick change events #276
 - Fix handling IRC server replies with strange casing #277
 - Will not truncate files when disk is full
 - Normalizing email address for user
 - Add translation for :), :( and <3 into emojis
 - Can select TLS on connect

0.99_09 2016-09-11T22:53:31+0200
 - Fix sorting participants list
 - Add support for /ns (/msg nickserv)
 - Add support for /cs (/msg chanserv)
 - Add clickable emails #265
 - Add support for markdown formatting for <code/>
 - Add support for rendering emojis #186